--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "babel-runtime": "^5.0.0",
     "browser-sync": "^2.10.0",
     "css-mqpacker": "^6.0.2",
+    "dat.gui": "^0.7.3",
     "del": "^3.0.0",
     "eslint": "^4.3.0",
     "eslint-config-airbnb": "^16.1.0",
