--- a/src/index.yaml
+++ b/src/index.yaml
@@ -7,7 +7,7 @@ PageList:
   ready: 50
 - file: paint.html
   ready: 50
-- file: squares.html
+- file: preloader.html
   ready: 50
 - file: whiteweb.html
   ready: 50
