--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "husky": "^0.14.3",
     "jquery": "^3.1.1",
     "lint-staged": "^7.0.4",
+    "load-google-maps-api": "^1.3.2",
     "lodash": "^4.3.0",
     "lost": "^7.1.0",
     "pixi": "^0.3.1",
@@ -66,6 +67,7 @@
     "require-dir": "^1.0.0",
     "require-yaml": "^0.0.1",
     "run-sequence": "^2.2.1",
+    "swiper": "^4.4.2",
     "through2": "^2.0.1",
     "webpack": "^4.6.0",
     "webpack-bundle-analyzer": "^2.11.1",
